@@ -24,7 +24,7 @@ function removeDiactrics(key) {
 
 function parseBrowseResp(data, parent, options, cacheKey) {
     // NOTE: If add key to resp, then update addToCache in utils.js
-    var resp = {items: [], baseActions:[], canUseGrid: false, jumplist:[] };
+    var resp = {items: [], baseActions:[], canUseGrid: false, jumplist:[], actions:[] };
 
     try {
     if (data && data.result) {
@@ -439,8 +439,9 @@ function parseBrowseResp(data, parent, options, cacheKey) {
                         resp.canUseGrid = false;
                     }
                 }
-                if (isMusicIpMix && resp.items.length>1) {
-                    resp.subtitle=i18np("1 Track", "%1 Tracks", resp.items.length-1);
+                if (isMusicIpMix && resp.items.length>1 && resp.items[1].id.startsWith("track_id")) {
+                    resp.items.shift();
+                    resp.subtitle=i18np("1 Track", "%1 Tracks", resp.items.length);
                 } else {
                     resp.subtitle=0==resp.items.length ? i18n("Empty") : i18np("1 Item", "%1 Items", resp.items.length);
                 }
