@@ -29,6 +29,8 @@
     view on mobile layout.
 19. Fix adding a selection of MusicIP mix tracks to queue.
 20. Add czech translation - thanks to Kucheek
+21. Remove 'Play this mix' entry in MusicIP mix resutlts, instead use standard
+    add/play buttons in subtoolbar.
 
 1.7.1
 -----
